2003-08-11  Tim Waugh  <twaugh@redhat.com>
	* src/plugins/Ancestors.py: Use Relationship.get_grandparents_string.

2003-08-10  Don Allingham  <dallingham@users.sourceforge.net>
	* src/Relationship.py: add "get_grandparents_string" to return the
	grandparents relationship between to people.

2003-08-10  Alex Roitman  <shura@alex.neuro.umn.edu>
	* configure.in: Set version to 0.9.4 (since the release is 0.CVS...).
	Otherwise it becomes older-version that the latest release. 
	* src/EditPerson.py: Change const.save_fevent() calls to
	const.save_event().
	* src/EventEdit.py: Display event name with const.display_event() 
	(was backwards).
	* src/GrampsParser.py: Call const.save_event() and const.attr() 
	when parsing XML. This should take care of prior data with standard 
	events and attributes recorded in $LANG. 
	* src/FamilyView.py (nameof): Translate parent's relation to a child. 
	* NEWS: More new items. 

2003-08-11  Alexandre Duret-Lutz  <adl@gnu.org>
	* configure.in: Modernize calls to AC_INIT, AM_INIT_AUTOMAKE and
	AC_OUTPUT.  Require Autoconf >= 2.57 and Automake >= 1.6.3.
	Remove many superfluous AC_SUBSTs.

2003-08-10  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/FilterEditor.py: support for selecting a person
	from a list to get the GRAMPS ID value
	* src/plugins/FilterEditor.py: handle Add/Edit of rules correctly
	* src/rule.glade: eliminate unneeded label and increased size

2003-08-10  Tim Waugh  <twaugh@redhat.com>
	* configure.in: Use 0.CVS[date] for RELEASE.  '-' is not allowed in
	RPM release strings, and prefixing with '0.' allows the final version
	to be version-compared as newer.

2003-08-09  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GenericFilter.py: Support for categories and descriptions
	for filters
	* src/Plugins.py: removed unused variable
	* src/gramps.desktop: compatible with desktop-file-validate
	* src/rule.glade: new add/edit filter dialog